# auldoCV

./: .gitignore  CMakeLists.txt  README.md
examples/2d_function_approximation/: main.cpp
examples/cifar_imge_classification/: main.cpp
include/: auldoCV.h  constants.h  machine_learning.h  tensor.h  vector.h
include/computational_graph/: computational_graph_node.h
include/concept/: arithmetic.h
include/data/: base_tensor.h  linearized.h  nested_tensor.h  tensor.h  vector.h
include/dataset/: read_cifar_10.h
include/gradient/: compute_node.h  compute_node_functions.h  compute_node_type.h
include/img/: convert_pixels_byte.h  convert_pixels_precise.h  read_image.h  write_image.h
include/initialization/: xavier.h
include/layer/: conv_layer.h  fc_layer.h  layer.h
include/loss/: binary_cross_entropy_loss.h  cross_entropy_loss.h  loss.h  mse_loss.h
include/neuron/: activation.h  fc_neuron.h  neuron.h
include/optimizer/: mini_batch_optimizer.h  optimizer.h  parallel_mini_batch_optimizer.h  sgd_optimizer.h
include/read/: read_image.h
include/vision/: base_kernel.h  conv_kernel.h  simple_kernel.h
include/write/: write_image.h
src/: playground.cpp
src/computational_graph/: computational_graph_node.cpp
src/dataset/: read_cifar_10.cpp
src/gradient/: compute_node.cpp  compute_node_functions.cpp
src/img/: read_image.cpp  write_image.cpp
src/initialization/: xavier.cpp
src/layer/: conv_layer.cpp  fc_layer.cpp  layer.cpp
src/loss/: binary_cross_entropy_loss.cpp  cross_entropy_loss.cpp  mse_loss.cpp
src/neuron/: activation.cpp  fc_neuron.cpp  neuron.cpp
src/optimizer/: mini_batch_optimizer.cpp  optimizer.cpp  parallel_mini_batch_optimizer.cpp  sgd_optimizer.cpp
src/read/: read_image.cpp
src/vision/: base_kernel.cpp  conv_kernel.cpp  simple_kernel.cpp
src/write/: write_image.cpp
submodules/compute_graph/: CMakeLists.txt  compute_graph.c  compute_graph.h  compute_node.c  compute_node.h  compute_tensor.c  compute_tensor.h
submodules/compute_graph/tests/: tests.c
test/: tests.cpp
